Refactor TLA+
- Moved from Ant to Maven to allow easier builds and upgrades
- Removed manual dependency management and converted it entirely to standard Maven.
- Integrated code base with VSCode and IntelliJ, while maintaining Eclipse compatibility
- Reduced test suite execution from 10min+ -> 2min.
- Removed all known memory leaks. Prior the vast majority of allocated non-TLCState/FPSet memory was retained until process exit.
- Allow tests to be run and debugged using IDE test runners
- Place build outputs in standard target directory
- Distinguish tests using JUnit categories, not just filepaths
- Allow incremental compilation for Maven
- Allow using diagnostic TLCState without starting the debugger, to facilitate easier testing.
- Improved ClassLoading of TLA+ modules to be less brittle.

- The base README.md now serves as a getting started page for developers, as well as a reference for all standard commands. It also contains an index into the other documentation.
- docs/CodebaseOverview.md has been added with an architectural walkthrough, coding standards and a semi-comprehensive discussion of codebase idiosyncrasies

- Ensures the entire AST is final before Tool.java is invoked
- Heap dumps can be usefully inspected to detect introduction of memory leaks (due to removal of memory leaks)

- Dramatically decreased reliance on static mutable state allowing serial reusable tool execution.  This was the prime reason for the test suite execution improvement
- Two tests that are not serially reusable are marked as such. Further analysis is likely to result in further improvement.

Code was rewritten to use standard collection classes rather than depending on non-standard implementations, reducing the learning curve and code size, and increasing reliability.

- tla2sany.utilities.Vector -> ArrayList
- tla2sany.utilities.Stack -> java.util.ArrayDeque
- tlc2.util.Vect -> ArrayList
- tlc2.util.Set -> java.util.Set
- tlc2.util.MemObjectQueue -> java.util.ArrayDeque
- tlc2